--- a/main.tex
+++ b/main.tex
@@ -30,9 +30,11 @@
 \include{cap-referencias}
 
 \part{Diseño}
+
 \pagenumbering{arabic}
 
 \part*{Bibliografía}
+\bibliography{bibliography}
 \part*{Índice}
 \printindex
 \end{document}
