--- a/cap-beneficios.tex
+++ b/cap-beneficios.tex
@@ -31,7 +31,7 @@ En la arquitectura actual, se dispone de inyectores hardware, llamados DAG, que 
 La utilización del sistema diseñado como herramienta de análisis de tráfico introduce un conjunto de beneficios económicos en relación con las aportaciones técnicas que se han expuesto anteriormente.
 
 \subsection{Análisis del tráfico en redes de alta velocidad}
-En la actualidad no existen apenas herramientas en el mercado capaces de realizar el análisis del tráfico en redes de alta velocidad. El sensor ha sido específicamente diseñado para satisfacer las necesidades de captura y procesamiento típicas en estas redes. Así, un producto derivado del prototipo de ksensor podría ser utilizado en los segmentos de alta velocidad de los Proveedores de Servicios de Internet (ISP), en los cuales podría resultar útil la medida de parámetros de QoS o la monitorización del tráfico cursante. Podría ser utilizado, también, como herramienta de análisis en las redes de área local de las empresas.
+En la actualidad no existen apenas herramientas en el mercado capaces de realizar el análisis del tráfico en redes de alta velocidad. Ksensor ha sido específicamente diseñado para satisfacer las necesidades de captura y procesamiento típicas en estas redes. Así, un producto derivado del prototipo de ksensor podría ser utilizado en los segmentos de alta velocidad de los Proveedores de Servicios de Internet (ISP), en los cuales podría resultar útil la medida de parámetros de QoS o la monitorización del tráfico cursante. Podría ser utilizado, también, como herramienta de análisis en las redes de área local de las empresas.
 
 \subsubsection{Localización de fallos de red}
 El buen funcionamiento de las redes corporativas es indispensable en el ejercicio empresarial. Esto es especialmente cierto en la actualidad, en que la mayor parte de las transacciones se realizan de forma telemática. Si por algún motivo la red completa cae puede significar un parón en el proceso productivo. La indisponibilidad del servicio impide que los clientes puedan contactar con la empresa o que se confirmen los pedidos. En cualquier caso, afectará negativamente a la producción y, en periodos de indisponibilidad largos, degradará su imagen. Haciendo uso del sensor se podría reducir el tiempo entre que ocurre el fallo y se arregla. El sensor analizaría todo el tráfico que circula por la red y podría programarse por ejemplo para monitorizar las conexiones con el servidor web. Si éste fallara, el sensor lo detectaría y podría generar una alarma para indicarlo. De este modo, el administrador de la red podría utilizar el sensor como herramienta de diagnóstico para localizar el origen del problema.
