--- a/cap-objetivos.tex
+++ b/cap-objetivos.tex
@@ -2,7 +2,7 @@
 % !TeX root = main.tex
 
 \chapter{Objetivos}
-El objetivo principal del proyecto es la \textbf{adaptación del programa ksensor y modificaciones asociadas en kernel a una versión actual y el desarrollo de herramientas para la validación del prototipo}. El diseño actual es el descrito en el proyecto KSENSOR\cite{KABO05}.
+El objetivo principal del proyecto es la \textbf{adaptación del programa Ksensor y modificaciones asociadas en kernel a una versión actual y el desarrollo de herramientas para la validación del prototipo}. El diseño actual es el descrito en el proyecto KSENSOR\cite{KABO05}.
 
 Por lo tanto, los objetivos a conseguir mediante este proyecto son:
 
@@ -24,11 +24,11 @@ El análisis del tráfico en redes de alta velocidad es un proceso costoso, que le
 Así pues, con un diseño en base a plataformas multiprocesador, se podrá disponer de múltiples instancias de análisis en la sonda, trabajando de forma concurrente sobre el tráfico capturado. El sistema diseñado deberá permitir, en la medida de lo posible, el paralelismo en el procesado de los paquetes, a fin de obtener un alto rendimiento. Se deberá resolver también, la sincronización en el acceso a la información compartida entre instancias.
 
 \section{Compatibilidad con los módulos externos la sonda}
-Debemos tener en cuenta que la sonda es tan sólo el núcleo del sistema de análisis de tráfico, y que para su buen funcionamiento necesita trabajar de forma coordinada con el resto de componentes del sistema, en particular, con el parser y el módulo de procesamiento offline\cite{AIDG03}, los cuales necesitan acceder al mapa de memoria de ksensor para realizar su cometido. Por esta razón, la sonda debe ofrecer una interfaz unificada y genérica para el acceso a su mapa de memoria desde el espacio de usuario y controlar el acceso al mismo a través de algún mecanismo de sincronización. El diseño que se realice deberá contemplar además la posibilidad de que existan nuevos módulos en el futuro.
+Debemos tener en cuenta que la sonda es tan sólo el núcleo del sistema de análisis de tráfico, y que para su buen funcionamiento necesita trabajar de forma coordinada con el resto de componentes del sistema, en particular, con el parser y el módulo de procesamiento offline\cite{AIDG03}, los cuales necesitan acceder al mapa de memoria de Ksensor para realizar su cometido. Por esta razón, la sonda debe ofrecer una interfaz unificada y genérica para el acceso a su mapa de memoria desde el espacio de usuario y controlar el acceso al mismo a través de algún mecanismo de sincronización. El diseño que se realice deberá contemplar además la posibilidad de que existan nuevos módulos en el futuro.
 
 \section{Estudio comparativo de rendimientos}
-La sonda a nivel de kernel (ksensor) pretende resolver las limitaciones inherentes al diseño del sensor en espacio de usuario (Adviser), con el fin de obtener una mejora de prestaciones que posibiliten el análisis del tráfico en redes de alta velocidad. Sin embargo, una implementación deficiente o, quizás, la existencia de factores que no se han considerado podrían impedir obtener los resultados esperados. Por lo tanto, se hace necesario poder comprobar y cuantificar las mejoras de rendimiento obtenidas, para poder valorar la viabilidad de un futuro producto comercial.
+La sonda a nivel de kernel (Ksensor) pretende resolver las limitaciones inherentes al diseño del sensor en espacio de usuario (Adviser), con el fin de obtener una mejora de prestaciones que posibiliten el análisis del tráfico en redes de alta velocidad. Sin embargo, una implementación deficiente o, quizás, la existencia de factores que no se han considerado podrían impedir obtener los resultados esperados. Por lo tanto, se hace necesario poder comprobar y cuantificar las mejoras de rendimiento obtenidas, para poder valorar la viabilidad de un futuro producto comercial.
 
-En este proyecto se reimplementará un prototipo de ksensor, el cual permitirá realizar las pruebas de rendimiento pertinentes, con el fin de poder valorar los resultados y comprobar las mejoras obtenidas, si las hubiera. Las pruebas de rendimiento permitirán, asimismo, conocer los parámetros de configuración óptimos en la sonda.
+En este proyecto se reimplementará un prototipo de Ksensor, el cual permitirá realizar las pruebas de rendimiento pertinentes, con el fin de poder valorar los resultados y comprobar las mejoras obtenidas, si las hubiera. Las pruebas de rendimiento permitirán, asimismo, conocer los parámetros de configuración óptimos en la sonda.
 
 Se debe tener en cuenta, que el rendimiento debe ser al menos, mejor que la anterior implementación, ya que en este caso se tiene un punto de partida. Para la comparación, se implementarán herramientas de medición del patrón de tiempos para poder diagnosticar efectos que no se hayan podido observar en el diseño.
