--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,22 @@
 \bibliographystyle{alpha}       % Estilo de bibliografía
 \usepackage{makeidx}            % Hacer índices
 \usepackage{fancyhdr}           % Cambiar las cabeceras del documento
+\usepackage{import}
+\usepackage{graphicx}
+\graphicspath{{images/}}
+
+\newcommand{\executeiffilenewer}[3]{%
+\ifnum\pdfstrcmp{\pdffilemoddate{#1}}%
+{\pdffilemoddate{#2}}>0%
+{\immediate\write18{#3}}\fi%
+}
+\newcommand{\includesvg}[1]{%
+\executeiffilenewer{#1.svg}{#1.pdf}%
+{inkscape -z -D --file=#1.svg %
+--export-pdf=#1.pdf --export-latex}%
+\input{#1.pdf_tex}%
+}
+
 
 \title{Adaptación y extensión de la herramienta de captura y análisis de tráfico KSENSOR}
 \author{Javier Domingo Cansino}
@@ -17,7 +33,6 @@
 \maketitle % Crear el título
 \tableofcontents % Crear la tabla de contenidos
 
-\part{Memoria}
 \pagenumbering{arabic}
 \include{cap-introduccion}
 \include{cap-objetivos}
@@ -29,12 +44,11 @@
 \include{cap-riesgos}
 \include{cap-referencias}
 
-\part{Diseño}
+\pagenumbering{Roman}
 
-\pagenumbering{arabic}
 
-\part*{Bibliografía}
 \bibliography{bibliography}
-\part*{Índice}
+
 \printindex
+
 \end{document}
