--- a/cap-beneficios.tex
+++ b/cap-beneficios.tex
@@ -31,7 +31,7 @@ En la arquitectura actual, se dispone de inyectores hardware, llamados DAG, que 
 La utilización del sistema diseñado como herramienta de análisis de tráfico introduce un conjunto de beneficios económicos en relación con las aportaciones técnicas que se han expuesto anteriormente.
 
 \subsection{Análisis del tráfico en redes de alta velocidad}
-En la actualidad no existen apenas herramientas en el mercado capaces de realizar el análisis del tráfico en redes de alta velocidad. Ksensor ha sido específicamente diseñado para satisfacer las necesidades de captura y procesamiento típicas en estas redes. Así, un producto derivado del prototipo de ksensor podría ser utilizado en los segmentos de alta velocidad de los Proveedores de Servicios de Internet (ISP), en los cuales podría resultar útil la medida de parámetros de QoS o la monitorización del tráfico cursante. Podría ser utilizado, también, como herramienta de análisis en las redes de área local de las empresas.
+En la actualidad no existen apenas herramientas en el mercado capaces de realizar el análisis del tráfico en redes de alta velocidad. Ksensor ha sido específicamente diseñado para satisfacer las necesidades de captura y procesamiento típicas en estas redes. Así, un producto derivado del prototipo de Ksensor podría ser utilizado en los segmentos de alta velocidad de los Proveedores de Servicios de Internet (ISP), en los cuales podría resultar útil la medida de parámetros de QoS o la monitorización del tráfico cursante. Podría ser utilizado, también, como herramienta de análisis en las redes de área local de las empresas.
 
 \subsubsection{Localización de fallos de red}
 El buen funcionamiento de las redes corporativas es indispensable en el ejercicio empresarial. Esto es especialmente cierto en la actualidad, en que la mayor parte de las transacciones se realizan de forma telemática. Si por algún motivo la red completa cae puede significar un parón en el proceso productivo. La indisponibilidad del servicio impide que los clientes puedan contactar con la empresa o que se confirmen los pedidos. En cualquier caso, afectará negativamente a la producción y, en periodos de indisponibilidad largos, degradará su imagen. Haciendo uso del sensor se podría reducir el tiempo entre que ocurre el fallo y se arregla. El sensor analizaría todo el tráfico que circula por la red y podría programarse por ejemplo para monitorizar las conexiones con el servidor web. Si éste fallara, el sensor lo detectaría y podría generar una alarma para indicarlo. De este modo, el administrador de la red podría utilizar el sensor como herramienta de diagnóstico para localizar el origen del problema.
@@ -55,7 +55,7 @@ Los beneficios sociales que aporta el sensor se derivan principalmente de la uti
 La arquitectura de pruebas puede utilizarse para comprobar el funcionamiento del sensor con diferentes parámetros de configuración, sometido a diversas cargas de red que también es posible especificar. De este modo, se pueden obtener de forma empírica los parámetros óptimos configurables en el sensor, como puede ser, por ejemplo, el tamaño de la cola en la que se almacenan los paquetes capturados.
 
 \subsection{Comparativa de rendimientos entre sensores}
-La arquitectura de pruebas se puede utilizar para realizar una comparativa de rendimiento entre los sensores a nivel de kernel  (ksensor) y a nivel de usuario (Adviser), con la finalidad de apreciar el comportamiento que éstos presentan cuando se los somete a un patrón de tráfico determinado. La ejecución de dichas pruebas permitirá, asimismo, justificar la realización de una continuación de este proyecto, en el caso de que se obtengan resultados favorables en el rendimiento de ksensor.
+La arquitectura de pruebas se puede utilizar para realizar una comparativa de rendimiento entre los sensores a nivel de kernel  (Ksensor) y a nivel de usuario (Adviser), con la finalidad de apreciar el comportamiento que éstos presentan cuando se los somete a un patrón de tráfico determinado. La ejecución de dichas pruebas permitirá, asimismo, justificar la realización de una continuación de este proyecto, en el caso de que se obtengan resultados favorables en el rendimiento de Ksensor.
 
 \subsection{Reducción del tiempo invertido en pruebas}
 Las pruebas se realizan de forma automatizada, con lo cual únicamente es necesario definir una batería de pruebas y el sistema las ejecutará sucesivamente en el orden que se hayan especificado. En consecuencia, el tiempo que se ha de invertir en realizar las pruebas se reduce notablemente.
